manifests/base/componentbook-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: joinrpg-componentbook
  name: joinrpg-componentbook
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: joinrpg-componentbook
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: joinrpg-componentbook
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app.kubernetes.io/name
                  operator: In
                  values:
                  - joinrpg-componentbook
              topologyKey: kubernetes.io/hostname
            weight: 100
      containers:
      - name: joinrpg-componentbook
        image: joinrpg-componentbook
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /health/live
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 30
        readinessProbe:
          failureThreshold: 5
          httpGet:
            path: /health/ready
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 30
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources:
          limits:
            cpu: 200m
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 64Mi
