manifests/base/componentbook-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: joinrpg-componentbook
  name: joinrpg-componentbook
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: joinrpg-componentbook
