manifests/base/componentbook-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: joinrpg-componentbook
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - override-me-joinrpb.ru
      secretName: override-me-joinrpb-ru-tls
  rules:
    - host: override-me-joinrpb.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: joinrpg-componentbook
                port:
                  number: 80
